# spectra

./: .gitignore  Cargo.toml  docker-compose.yml
backend/: .gitignore  Cargo.toml  docker-compose.yml
backend/entity/src/: message.rs  mod.rs  prelude.rs  room.rs  user.rs
backend/migration/src/: lib.rs  m20220101_000001_users_table.rs  m20220101_000002_messages_table.rs  m20220101_000003_rooms_table.rs
backend/src/: lib.rs  main.rs
backend/src/auth/: jwt.rs
backend/src/handlers/: message_handler.rs  mod.rs  room_handler.rs  user_handlers.rs
backend/src/middlewares/: jwt_checker.rs  mod.rs
backend/src/models/: jwt_claims.rs  message_model.rs  mod.rs  room_model.rs  user_models.rs
backend/src/redis_manager/: session_manager.rs
backend/src/routes/: message_routes.rs  mod.rs  room_routes.rs  user_routes.rs
entity/src/: message.rs  mod.rs  prelude.rs  user.rs
frontend/spectra/: package-lock.json  package.json
frontend/spectra/public/: index.html
frontend/spectra/src/: App.css  App.js  index.css
frontend/spectra/src/components/: home.component.js  login.component.js  private.route.js  with_nav.component.js
frontend/spectra/src/min-components/: chatWindowComponent.js  header.js  inputBox.js  message.js  userList.js
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users_table.rs
src/: lib.rs  main.rs
src/auth/: jwt.rs
src/handlers/: user_handlers.rs
src/middlewares/: jwt_checker.rs
src/models/: message_model.rs  mod.rs  user_models.rs
src/routes/: message_routes.rs  mod.rs  user_routes.rs
